ATUALIZAÇÃO: biblioteca para arquivos excel .xlsx

--- a/env.yaml
+++ b/env.yaml
@@ -43,4 +43,5 @@ dependencies:
   - wheel=0.37.1=pyhd3eb1b0_0
   - win_inet_pton=1.1.0=py39hcbf5309_3
   - wincertstore=0.2=py39haa95532_2
+  - xlsxwriter=3.0.2=pyhd8ed1ab_0
 prefix: C:\Users\Middle\.conda\envs\banco_meteorologia
